# uFork

./: .gitignore  Cargo.toml  Makefile.toml
.cargo/: config.toml
.github/workflows/: pages.yml  tests.yml
crates/debug-ui/: Cargo.toml  core.blob_ram.json  core.gc_queue.json  core.quad_ram.json  core.quad_rom.json
crates/debug-ui/src/: main.rs
crates/egui_quad_editor/: Cargo.toml  README.md
crates/egui_quad_editor/src/: lib.rs  option_data.rs  option_ui.rs
crates/ufork/: Cargo.toml
crates/ufork-compiler/: Cargo.toml
crates/ufork-compiler/scm/: echo.scm  example.scm  fib.scm  future.scm
crates/ufork-wasm/: Cargo.toml  run_asm_tests.js
crates/ufork-wasm/examples/grant_matcher/: donor.asm  gm.asm  keqd.asm
crates/ufork-wasm/examples/peer_chat/: chat.asm
crates/ufork-wasm/examples/stdio/: echo.asm
crates/ufork-wasm/src/: host.rs  lib.rs
crates/ufork/src/: any.rs  core.rs  device.rs  host.rs  lib.rs  quad.rs
doc/: awp_device.md  crlf.md  proto.md
old/c_src/: README.md
old/webui/: package-lock.json
www/: asm_test.js  index.js  scheme.js  ufork.js
www/devices/: awp_device.js  host_device.js
