[workspace]
resolver = "2"
members = ["crates/*"]
default-members = ["crates/debug-ui"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"					# optimize for small code size
lto = true              		# enable link time optimization
strip = true            		# strip debug symbols