[package]
name = "debug-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_quad_editor = { path = "../egui_quad_editor", features = ["serde"] }
egui_tracing = { version = "0.2.1", default-features = false }
log = "0.4.20"
tracing-subscriber = { version = "0.3.17", default-features = false }
notan = { version = "0.10.0", features = ["serde", "drop_files", "notan_egui", "egui", "text", "save_file"] }
ufork = { path = "../ufork", default-features = false }
tracing = { version = "0.1.37", default-features = false }
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"
serde_json = "1.0.107"
lol_alloc = "0.4.0"
egui_logger = "0.3.1"

[features]
default = []
no-std = ["ufork/no-std"]
