[package]
name = "egui_quad_editor"
version = "0.2.6"
authors = ["Hirtol <rust@hirtol.top>", "hardliner66 <hardliner66@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"

[features]
default = []
serde = ["dep:serde", "egui/persistence"]

[dependencies]
egui = "0.22"

[dev-dependencies]
eframe = "0.23"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

