[package]
name = "ufork"
version = "0.1.0"
authors = ["Dale Schumacher <dalnefre@yahoo.com>"]
edition = "2021"
description = "uFork VM in Rust"
repository = "https://github.com/organix/uFork/tree/main/crates/ufork"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.188", features = ["derive", "alloc"], default-features = false }

[features]
default = []
no-std = []
